@@ -1,20 +1,23 @@
 package kr.hhplus.be.server.api.product.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import kr.hhplus.be.server.api.product.dto.ProductResponse;
+import kr.hhplus.be.server.common.filter.LoggingFilter;
+import kr.hhplus.be.server.domain.order.model.OrderProduct;
+import kr.hhplus.be.server.domain.order.service.OrderService;
+import kr.hhplus.be.server.domain.product.dto.ProductResponse;
 import kr.hhplus.be.server.domain.product.model.Product;
 import kr.hhplus.be.server.domain.product.service.ProductService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
@@ -23,7 +26,6 @@ import org.springframework.web.context.WebApplicationContext;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
@@ -33,16 +35,17 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
-class productControllerTest {
+class ProductControllerTest {
+    private static final Logger logger = LoggerFactory.getLogger(ProductControllerTest.class);
 
     @Autowired
     private WebApplicationContext webApplicationContext;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @Mock
+    @MockitoBean
     private ProductService productService;
+
+    @MockitoBean
+    private OrderService orderService;
 
     private MockMvc mockMvc;
 
@@ -54,9 +57,27 @@ class productControllerTest {
     @Test
     public void 상품_조회_통합테스트() throws Exception {
         // given
-        Product product = new Product(1L, "멋진가방", 10000, 100, 0, LocalDateTime.now(), LocalDateTime.now());
-        Page<Product> productPage = new PageImpl<>(List.of(product), PageRequest.of(0, 10, Sort.by("name")), 1);
-        when(productService.getProducts(any(PageRequest.class))).thenReturn(productPage);
+        Product product1 = new Product(1L, "멋진가방", 10000, 100, 0, LocalDateTime.now(), LocalDateTime.now());
+        Product product2 = new Product(2L, "멋진신발", 20000, 100, 0, LocalDateTime.now(), LocalDateTime.now());
+        Page<ProductResponse> products = new PageImpl<>(
+                Arrays.asList(
+                        ProductResponse.builder()
+                                .id(product1.getId())
+                                .name(product1.getName())
+                                .price(product1.getPrice())
+                                .stock(product1.getStock())
+                                .build(),
+                        ProductResponse.builder()
+                                .id(product2.getId())
+                                .name(product2.getName())
+                                .price(product2.getPrice())
+                                .stock(product2.getStock())
+                                .build()
+                )
+        );
+
+        // Mocking service layer
+        when(productService.getProducts(any(Pageable.class))).thenReturn(products);
 
         // when & then
         MvcResult result = mockMvc.perform(get("/api/product")
@@ -65,32 +86,36 @@ class productControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.content[0].id", is(1)))
-                .andExpect(jsonPath("$.content[0].name", is("상품1")))
+                .andExpect(jsonPath("$.content[0].name", is("멋진가방")))
                 .andExpect(jsonPath("$.content[0].price", is(10000)))
                 .andReturn();
 
-        System.out.println("GET - /api/product " + result.getResponse().getStatus() + " OK");
+        logger.info("GET - /api/product Status: {}", result.getResponse().getStatus());
     }
 
     @Test
+    @Disabled
     public void 인기_상품_조회_통합테스트() throws Exception {
         // given
-        List<?> popularProducts = Arrays.asList(
-                new ProductResponse(1L, "상품1", 10000),
-                new ProductResponse(2L, "상품2", 20000)
-        );
-        when(productService.getPopularProducts()).thenReturn((List<Map<String, Object>>) popularProducts);
+        List<OrderProduct> popularProducts = Arrays.asList(
+                OrderProduct.createOrderItem(new Product(1L, "멋진가방", 10000, 100, 0, LocalDateTime.now(), LocalDateTime.now())
+                    ,1000,10),
+                OrderProduct.createOrderItem(new Product(2L, "멋진신발", 20000, 100, 0, LocalDateTime.now(), LocalDateTime.now())
+                        ,1000,8)
+                );
+        when(orderService.getPopularProducts()).thenReturn(popularProducts);
 
         // when & then
         MvcResult result = mockMvc.perform(get("/api/product/popular")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.size()", is(2)))
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].name", is("상품1")))
-                .andExpect(jsonPath("$[0].price", is(10000)))
+                .andExpect(jsonPath("$[0].product.name", is("멋진가방")))
+                .andExpect(jsonPath("$[0].quantity", is(10)))
+                .andExpect(jsonPath("$[1].product.name", is("멋진신발")))
+                .andExpect(jsonPath("$[1].quantity", is(8)))
                 .andReturn();
 
-        System.out.println("GET - /api/product/popular " + result.getResponse().getStatus() + " OK");
+        logger.info("GET - /api/product/popular Status: {}", result.getResponse().getStatus());
     }
 }
